--- a/Homework 05/web/car_dealership/src/app/components/cars/cars.component.html
+++ b/Homework 05/web/car_dealership/src/app/components/cars/cars.component.html
@@ -1,22 +1,12 @@
 <mat-grid-list cols="3" rowHeight="2:1">
-  <mat-grid-tile *ngFor="let car of cars | async">
-    <app-car [car]="car"></app-car>
-  </mat-grid-tile>
+  @for(car of cars | async; track car.id){
+    <app-car [car]="car" />
+  }
 </mat-grid-list>
 
 
 
-<!-- <section>
-  @for (car of cars(); track car.id){
-    <app-car [car]="(cars)"/>
-  }
-</section> -->
-<!--Probuvav so ovaa sintaksa i go dobivav sledniot error -->
-<!--Type 'CarsData[]' has no properties in common with type 'CarsData'.-->
-<!--Nemozev da go resam ovoj error-->
 
-
-<!--Opsto i na ostanatite nekoj domasni koga probuvam da koristam @for loop mi pravi problemi ne znam zosto-->
 
 
 
